Add openjdk8 wildfly 20.0.1

--- a/20/wildfly-20-s2i-template.yaml
+++ b/20/wildfly-20-s2i-template.yaml
@@ -2,18 +2,18 @@
   apiVersion: v1
   kind: Template
   metadata:
-    name: wildlfy19-s2i-mvilche
+    name: wildlfy19-s2i-sofislat
     labels:
-      template: wildlfy-s2i-mvilche
-      autor: "Martin_Fabrizzio_Vilche"
+      template: wildlfy-s2i-sofislat
+      autor: "Sofis olutions"
     annotations:
-      openshift.io/display-name: "wildlfy19-s2i-mvilche"
+      openshift.io/display-name: "wildlfy19-s2i-sofislat"
       iconClass: "icon-wildfly"
       description: >-
         Wildfly s2i images + openjdk + Maven + jolokia
-      openshift.io/provider-display-name: "Martin Fabrizzio Vilche"
-      openshift.io/documentation-url: "https://github.com/mvilche/wildfly-s2i.git"
-      openshift.io/support-url: "https://github.com/mvilche/wildfly-s2i.git"
+      openshift.io/provider-display-name: "Sofis Solutions"
+      openshift.io/documentation-url: "https://github.com/sofislat/wildfly-s2i.git"
+      openshift.io/support-url: "https://github.com/sofislat/wildfly-s2i.git"
   message: >-
     La conexion a la base de datos podra ser realizada en el standalone.xml disponible en los configmaps
 
@@ -293,7 +293,7 @@
         contextDir: ${WILDFLY_VERSION}/openjdk${VERSION_JDK}
         git:
           ref: master
-          uri: 'https://github.com/mvilche/wildfly-s2i.git'
+          uri: 'https://github.com/sofislat/wildfly-s2i.git'
         type: Git
       strategy:
         dockerStrategy:
@@ -332,7 +332,7 @@
         contextDir: ${WILDFLY_VERSION}/openjdk${VERSION_JDK}
         git:
           ref: master
-          uri: 'https://github.com/mvilche/wildfly-s2i.git'
+          uri: 'https://github.com/sofislat/wildfly-s2i.git'
         type: Git
       strategy:
         dockerStrategy:
